half done data ingestion process

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -10,6 +10,85 @@
     "from box import ConfigBox\n",
     "d = {\"key\": \"val\", \"key1\": \"val1\"}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Download data from gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11JSzIggqryIUf5g62FNonYboVdKiDhhu'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://drive.google.com/file/d/11JSzIggqryIUf5g62FNonYboVdKiDhhu/view?usp=sharing'\n",
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (uriginal): https://drive.google.com/uc?/export=download&id=11JSzIggqryIUf5g62FNonYboVdKiDhhu\n",
+      "From (redirected): https://drive.google.com/uc?/export=download&id=11JSzIggqryIUf5g62FNonYboVdKiDhhu&confirm=t&uuid=ee53a9e5-906d-4c78-8e0c-7235ca74a615\n",
+      "To: c:\\Users\\SHERIF ATITEBI O\\Documents\\Kidney-Disease-Classification-Project\\research\\Kidney-CT-Scan-Data.zip\n",
+      "100%|██████████| 64.0M/64.0M [01:52<00:00, 570kB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Kidney-CT-Scan-Data.zip'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix+file_id, \"Kidney-CT-Scan-Data.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
